--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update && apt-get install -y \
     libpng-dev \
     libtiff5-dev \
     libjpeg-dev \
+    git \
     sudo \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
@@ -22,7 +23,7 @@ RUN /rocker_scripts/install_pandoc.sh 3.1.1
 
 # Install pak and use it to install other R packages
 RUN R -e "install.packages('pak', repos = 'https://cran.rstudio.com/')" && \
-    R -e "pak::pkg_install(c('rmarkdown@2.21', 'languageserver@0.3.15', 'knitr@1.43', 'devtools@2.4.5', 'httpgd@1.3.1'))"
+    R -e "pak::pkg_install(c('devtools', 'httpgd', 'knitr', 'languageserver', 'renv', 'rmarkdown'))"
 
 # Add .Rprofile
 RUN echo "options(repos = c(CRAN = 'https://cran.rstudio.com/'))" > ~/.Rprofile
@@ -35,8 +36,11 @@ RUN useradd -m ruser && \
 
 USER ruser
 
+# Create workspace directory and set ownership
+RUN mkdir -p /home/ruser/workspace && chown ruser:ruser /home/ruser/workspace
+
 # Set the working directory
-WORKDIR /workspace
+WORKDIR /home/ruser/workspace
 
 # Set the default command to R
 CMD ["R"]
