feat: adds key system deps and includes Python, Radian, and installs tinytex for Latex support

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM rocker/r-ver:4.3.1
+FROM rocker/r-ver:4.4.1
 
 # Install system dependencies including sudo
 RUN apt-get update && apt-get install -y \
@@ -12,6 +12,10 @@ RUN apt-get update && apt-get install -y \
     libpng-dev \
     libtiff5-dev \
     libjpeg-dev \
+    curl \
+    python3 \
+    openssh-client \
+    pip \
     git \
     sudo \
     && apt-get clean \
@@ -21,12 +25,6 @@ RUN apt-get update && apt-get install -y \
 RUN /rocker_scripts/install_quarto.sh 1.3.450
 RUN /rocker_scripts/install_pandoc.sh 3.1.1
 
-# Install pak and use it to install other R packages
-RUN R -e "install.packages('pak', repos = 'https://cran.rstudio.com/')" && \
-    R -e "pak::pkg_install(c('devtools', 'httpgd', 'knitr', 'languageserver', 'renv', 'rmarkdown'))"
-
-# Add .Rprofile
-RUN echo "options(repos = c(CRAN = 'https://cran.rstudio.com/'))" > ~/.Rprofile
 
 # Add a non-root user with sudo privileges
 RUN useradd -m ruser && \
@@ -36,11 +34,22 @@ RUN useradd -m ruser && \
 
 USER ruser
 
+# Add .Rprofile
+RUN copy .Rprofile /home/ruser/.Rprofile
+
+# Install pak and use it to install other R packages
+RUN R -e "install.packages('pak', repos = 'https://cran.rstudio.com/')" && \
+    R -e "pak::pkg_install(c('devtools', 'httpgd', 'knitr', 'languageserver', 'renv', 'rmarkdown', 'tinytex'))"
+RUN R -e "tinytex::install_tinytex(force = TRUE)"
+
+RUN pip3 install -U radian
+RUN pip3 install -U jupyter
+
 # Create workspace directory and set ownership
 RUN mkdir -p /home/ruser/workspace && chown ruser:ruser /home/ruser/workspace
 
 # Set the working directory
 WORKDIR /home/ruser/workspace
 
-# Set the default command to R
-CMD ["R"]
+# Source the .profile file and start bash
+CMD ["bash", "-c", "source ~/.profile && exec bash"]
