--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,9 @@
 FROM rocker/r-ver:4.4.1
 
+ENV DEFAULT_USER="ruser"
+ENV QUARTO_VERSION="1.3.450"
+ENV PANDOC_VERSION="3.1.1"
+
 # Install system dependencies including sudo
 RUN apt-get update && apt-get install -y \
     libcurl4-openssl-dev \
@@ -22,31 +26,26 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Quarto and Pandoc using rocker scripts
-RUN /rocker_scripts/install_quarto.sh 1.3.450
-RUN /rocker_scripts/install_pandoc.sh 3.1.1
-
+RUN /rocker_scripts/install_quarto.sh
+RUN /rocker_scripts/install_pandoc.sh
+RUN /rocker_scripts/default_user.sh $DEFAULT_USER
 
 # Add a non-root user with sudo privileges
-RUN useradd -m ruser && \
-    usermod -aG sudo ruser && \
-    echo "ruser ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers.d/ruser && \
-    chmod 0440 /etc/sudoers.d/ruser
+RUN usermod -aG sudo ${DEFAULT_USER} && \
+    echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
-USER ruser
+USER $DEFAULT_USER
 
 # Add .Rprofile
-RUN copy .Rprofile /home/ruser/.Rprofile
+COPY .Rprofile /home/ruser/.Rprofile
 
 # Install pak and use it to install other R packages
 RUN R -e "install.packages('pak', repos = 'https://cran.rstudio.com/')" && \
     R -e "pak::pkg_install(c('devtools', 'httpgd', 'knitr', 'languageserver', 'renv', 'rmarkdown', 'tinytex'))"
 RUN R -e "tinytex::install_tinytex(force = TRUE)"
 
-RUN pip3 install -U radian
-RUN pip3 install -U jupyter
-
-# Set the working directory
-WORKDIR /home/ruser
+RUN sudo pip3 install -U radian
+RUN sudo pip3 install -U jupyter
 
 # Source the .profile file and start bash
 CMD ["bash", "-c", "source ~/.profile && exec bash"]
